# noobwerkz-ng

./: .gitignore  Cargo.toml  README.md
src/: animation_graph.rs  app.rs  asset_manager.rs  callbacks.rs  camera.rs  camera2.rs  camera_context.rs  camera_controller.rs  character.rs  egui_renderer.rs  egui_tools.rs  generic_model.rs  graphics.rs  graphics_context.rs  index_types.rs  instance.rs  lib.rs  light.rs  light_uniform.rs  load_gltf.rs  main.rs  material.rs  mesh.rs  model.rs  model_node.rs  normal_mapped_model.rs  physics_context.rs  playback.rs  primitives.rs  resource.rs  scene.rs  serialized_model.rs  skeletal_animate.rs  skeletal_context.rs  skinned_model.rs  skinned_model_node.rs  state.rs  texture.rs  types.rs  ui.rs  (+6 more)
src/passes/: forward.rs  forward_renderer.rs  mod.rs  phong.rs  skinned.OLD.wgsl  skinned.wgsl  skinned.wgsl.old
