[package]
name = "noobwerkz"
version = "0.0.1"
edition = "2024"

[lib]
name = "noobwerkz"
path = "src/lib.rs"

[dependencies]
ozz-animation-rs = "0.11"
#smartcore = "0.4.3"
rerecast = "0.2.0"
#dodgy_3d = "0.5.2"
dodgy_2d = "0.5.5"
#sampled-dmc = "0.1.2"
glam = "0.30"
rapier3d = { version = "0.30.0", features = ["serde-serialize", "enhanced-determinism"] }
wgpu = "27.0.1"
winit = "0.30.12"
pollster = "0.4.0"
env_logger = "0.11.8"
safe_index = "0.10.0"
#bevy_ecs = "0.17.2"
libm = "0.2.15"
image = "0.25.8"
anyhow = "1.0.100"
bytemuck = "1.24.0"
bitmask-enum = "2.2.5"
once_cell = "1.21.3"
futures = "0.3.31"
web-time = "1.1.0"
rayon = "1.11.0"
msgpacker = "0.4.8"
serde = { version = "1.0.228", features = ["serde_derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
egui = "0.33.0"
truck-modeling = "0.6.0"
truck-meshalgo = "0.4.0"
truck-stepio = "0.3.0"
rusty_enet = "0.4.0"
