[package]
name = "noobwerkz"
version = "0.0.1"
edition = "2024"

[lib]
name = "noobwerkz"
path = "src/lib.rs"

[dependencies]
ozz-animation-rs = "0.11"
#smartcore = "0.4.3"
rerecast = "0.2.0"
dodgy_3d = "0.5"
dodgy_2d = "0.5"
#sampled-dmc = "0.1.2"
glam = { version = "0.30", features=["bytemuck", "core-simd"]}
rapier3d = { version = "0.30.0", features = ["serde-serialize", "enhanced-determinism"] }
wgpu = "27.0"
winit = "0.30.12"
pollster = "0.4.0"
env_logger = "0.11.8"
safe_index = "0.10.0"
libm = "0.2.15"
image = "0.25.8"
anyhow = "1.0.100"
bytemuck = "1.24.0"
bitmask-enum = "2.2.5"
once_cell = "1.21.3"
futures = "0.3.31"
web-time = "1.1.0"
rayon = "1.11.0"
msgpacker = "0.4.8"
serde = { version = "1.0.228", features = ["serde_derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
truck-modeling = { git="https://github.com/ColinGilbert/truck-modeling-fix", branch="main" }
truck-meshalgo = { git="https://github.com/ColinGilbert/truck-modeling-fix", branch="main", default-features = false, features = ["analyzers", "filters", "spade", "tessellation"] }
truck-stepio = {git="https://github.com/ColinGilbert/truck-modeling-fix", branch="main"}
rusty_enet = "0.4.0"
futures-signals = "0.3.34"
slotmap = "1.0.7"
egui = "0.33.0"
egui-wgpu = { version = "0.33.2" }
egui-winit = "0.33.2"
egui_field_editor = "0.2.2"
kira = "0.11.0"
dogoap = "0.5.0"
egui-snarl = "0.9.0"
mapgraph = "0.12.0"
anim-graph-rs = { git="https://www.github.com/ColinGilbert/anim-graph-rs.git", branch="main" }

