[package]
name = "noobwerkz"
version = "0.0.1"
edition = "2024"

[lib]
name = "noobwerkz"
path = "src/lib.rs"

[dependencies]
ozz-animation-rs = { git = "https://github.com/colingilbert/ozz-animation-rs.git", branch = "master" }
simple-animgraph = { git = "https://github.com/colingilbert/simple-anim-graph.git", branch = "main" }
#smartcore = "0.4.3"
#rerecast = "0.3.2"
#dodgy_3d = "0.5"
#dodgy_2d = "0.5"
#sampled-dmc = "0.1.2"
glam = { version = "0.33", features=["bytemuck", "core-simd"]}
rapier3d = { version = "0.33.0", features = ["serde-serialize", "enhanced-determinism"] }
wgpu = "29.0"
winit = "0.30.13"
pollster = "0.4.0"
env_logger = "0.11.11"
safe_index = "0.10.0"
libm = "0.2.16"
image = "0.25.10"
anyhow = "1.0.103"
bytemuck = "1.25.0"
bitmask-enum = "2.2.5"
once_cell = "1.21.4"
futures = "0.3.32"
web-time = "1.1.0"
rayon = "1.12.0"
msgpacker = "0.7.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
futures-signals = "0.3.34"
slotmap = "1.1.1"
egui = "0.35.0"
egui-wgpu = { version = "0.35.0" }
egui-winit = "0.35.0"
egui_field_editor = "0.6.0"
kira = "0.12.1"
dogoap = "0.5.0"
egui-snarl = "0.11.0"
mapgraph = "0.12.0"
wincode = "0.5.5"

